ログとローカライズに対応

--- a/Tsumugi/Tsumugi/Tsumugi.csproj
+++ b/Tsumugi/Tsumugi/Tsumugi.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\ja\Localization.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ja\Localization.xml" />
+  </ItemGroup>
+
 </Project>
