--- a/Tsumugi/TsumugiUnitTest/TsumugiUnitTest.csproj
+++ b/Tsumugi/TsumugiUnitTest/TsumugiUnitTest.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest.cs" />
+    <Compile Include="ParserUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LexerUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
