トークンに行・列の情報を持たせる

--- a/Tsumugi/TsumugiUnitTest/TsumugiUnitTest.csproj
+++ b/Tsumugi/TsumugiUnitTest/TsumugiUnitTest.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EvaluatorUnitTest.cs" />
+    <Compile Include="LexingStringReaderUnitTest.cs" />
     <Compile Include="TsumugiParserUnitTest.cs" />
     <Compile Include="ParserUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
