Tsumugi のシンタックスハイライトに対応

--- a/Tsumugi/TsumugiEditor/TsumugiEditor.csproj
+++ b/Tsumugi/TsumugiEditor/TsumugiEditor.csproj
@@ -115,6 +115,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EmbeddedResource Include="Resources\Tsumugi.xshd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
