--- a/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
+++ b/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
@@ -59,19 +59,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="D3D11Renderer.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RenderablePanel.cs">
+    <Compile Include="Renderable.cs">
       <SubType>UserControl</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="RenderablePanel.resx">
-      <DependentUpon>RenderablePanel.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
