--- a/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
+++ b/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Renderable.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
