--- a/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
+++ b/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
@@ -59,10 +59,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RenderManager.cs" />
-    <Compile Include="Renderer.cs" />
+    <Compile Include="Engine\Rendering\RenderManager.cs" />
+    <Compile Include="Engine\Rendering\Renderer.cs" />
+    <Compile Include="Engine\TextEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Renderable.cs">
+    <Compile Include="RenderablePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Utility.cs" />
