--- a/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
+++ b/Tsumugi/TsumugiRenderer/TsumugiRenderer.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Engine\Text\ResourceFont\ResourceFontLoader.cs" />
     <Compile Include="Engine\Text\TextEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderableExecutor.cs" />
     <Compile Include="RenderablePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -75,6 +76,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Tsumugi\Tsumugi.csproj">
+      <Project>{86214d25-7179-4a38-9887-92fb92f76555}</Project>
+      <Name>Tsumugi</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
